--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
     "linebreak-style": "off",
     "comma-dangle": "off",
     "indent": "off",
-    "require-jsdoc": "off"
+    "require-jsdoc": "off",
+    "eol-last": "off"
   },
   "extends": [
     "eslint:recommended", "google"
